--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
   text-align: center;
+  margin-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table {
+  border-collapse: collapse;
+  width: 100%;
+  /* background-color: lightgray; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+th, td {
+  border: 1px solid black;
+  padding: 20px;
+  text-align: left;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+th {
+  background-color:lightgray; /* Background color of the first row */
+  padding-left: 90px;
 }
 
-.App-link {
-  color: #61dafb;
+td:first-child {
+  background-color:lightgray; /* Background color of the first column */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+tbody tr:nth-child(even) td:not(:first-child) {
+  background-color: white; /* Background color of rest columns */
+}
+
+tbody tr:nth-child(2n) td:nth-child(n+2) {
+  background-color: white; /* Making 2nd and 4th rows from 2nd column white */
 }
